--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/tinaonthelam/twitter-js#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "chalk": "^1.1.3",
+    "express": "^4.15.2",
+    "volleyball": "^1.4.1"
   }
 }
